Fix semantic class in index, spacing 8px model

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,7 +13,7 @@ body {
   width: 100%;
   height: 100vh;
 
-  background-color: #1a1a1a;
+  background-color: $blue-dark;
 }
 
 img {
@@ -44,3 +44,4 @@ p {
 @import 'partials/layout';
 @import 'partials/menu';
 @import 'partials/animations';
+@import 'partials/spacing';
